# QuoridorCore

plugins/: CMakeLists.txt
plugins/seb_plugin/: CMakeLists.txt
plugins/seb_plugin/include/: GameState.h  GraphSearchCommon.h  SebPlayer.h
plugins/seb_plugin/src/: GameState.cpp  GraphSearch.cpp  PlayerRegistration.cpp  SebPlayer.cpp
